--- a/index.html
+++ b/index.html
@@ -1,15 +1,309 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bootstrap 4</title>
+	<title>Calm Mind - Home</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- <link href="img/favicon.png" type="img/png" rel="icon"> -->
 	<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
 	<link href="css/index.css" type="text/css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	
 <!-- Your code here! -->
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-12 text-center hours-banner">
+			Hours of Operation: Monday - Saturday - 9am - 7pm
+		</div>
+	</div>
+</div>
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-12 banner text-center">
+				<a href="">800-255-4321</a>
+				<p>|</p>
+				<a href="">Sign In</a>
+				<p>|</p>
+				<a href="">Wish List</a>
+				<p>|</p>
+				<a href="">Cart <span class="badge badge-pill badge-dark">0</span></a>
+		</div>
+	</div>
+</div>
+
+<div class="container-fluid heading-section">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col">
+				<a href="" class="fa fa-instagram"></a>
+				<a href="" class="fa fa-twitter"></a>
+				<a href="" class="fa fa-facebook"></a>
+			</div>
+			<div class="col-6">
+				<img src="images/logo.jpg" class="rounded mx-auto d-block" alt="logo">
+			</div>
+			<div class="col">
+				<div class="input-group mb-3">
+					<input type="text" class="form-control" placeholder="Search" aria-label="Recipient's username" aria-describedby="basic-addon2">
+					<div class="input-group-append">
+						
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    	<span class="navbar-toggler-icon"></span>
+  	</button>
+	  
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto">
+		<li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			Massages
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			<a class="dropdown-item" href="#">Schedule</a>
+			<a class="dropdown-item" href="#">Pricing</a>
+			<a class="dropdown-item" href="#">More Information</a>
+			</div>
+		</li>
+		<li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			Facials
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			<a class="dropdown-item" href="#">Schedule</a>
+			<a class="dropdown-item" href="#">Pricing</a>
+			<a class="dropdown-item" href="#">More Information</a>
+			</div>
+		</li>
+		<li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			Nails
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			<a class="dropdown-item" href="#">Schedule</a>
+			<a class="dropdown-item" href="#">Pricing</a>
+			<a class="dropdown-item" href="#">More Information</a>
+			</div>
+		</li>
+		<li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			Hair
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			<a class="dropdown-item" href="#">Schedule</a>
+			<a class="dropdown-item" href="#">Pricing</a>
+			<a class="dropdown-item" href="#">More Information</a>
+			</div>
+		</li>
+		<li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			Oils
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			<a class="dropdown-item" href="#">Catelog</a>
+			<a class="dropdown-item" href="#">Pricing</a>
+			<a class="dropdown-item" href="#">More Information</a>
+			</div>
+		</li>
+		<li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			Lotions
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			<a class="dropdown-item" href="#">Catelog</a>
+			<a class="dropdown-item" href="#">Pricing</a>
+			<a class="dropdown-item" href="#">More Information</a>
+			</div>
+		</li>
+		<li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			Skin Care Treatment
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			<a class="dropdown-item" href="#">Schedule</a>
+			<a class="dropdown-item" href="#">Pricing</a>
+			<a class="dropdown-item" href="#">More Information</a>
+			</div>
+		</li>
+		</ul>
+	</div>
+</nav>
+
+<div class="container img-section">
+	<div class="row">
+		<div class="col-12">
+			<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img src="images/spa1.jpg" class="d-block w-100" alt="...">
+					</div>
+					<div class="carousel-item">
+						<img src="https://images.unsplash.com/photo-1488345979593-09db0f85545f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" class="d-block w-100" alt="...">
+					</div>
+					<div class="carousel-item">
+						<img src="https://images.unsplash.com/photo-1445019980597-93fa8acb246c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1653&q=80" class="d-block w-100" alt="...">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-12 text-center products-heading">
+			<h2><span>Featured Categories</span></h2>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-3">
+			<img src="https://images.unsplash.com/photo-1544161515-4ab6ce6db874?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=250&h=200&q=80" alt="">
+			<h5 class="text-center links"><a href="#">Massages</a></h5>
+		</div>
+		<div class="col-3">
+			<img src="https://images.unsplash.com/photo-1531299244174-d247dd4e5a66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=250&h=200&q=80" alt="">
+			<h5 class="text-center links"><a href="#">Facials</a></h5>
+		</div>
+		<div class="col-3">
+			<img src="https://images.unsplash.com/photo-1457972729786-0411a3b2b626?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=250&h=200&q=80" alt="">
+			<h5 class="text-center links"><a href="#">Nails</a></h5>
+		</div>
+		<div class="col-3">
+			<img src="https://images.unsplash.com/photo-1522337360788-8b13dee7a37e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=250&h=200&q=80" alt="">
+			<h5 class="text-center links"><a href="#">Hair</a></h5>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-12 text-center products-heading">
+			<h2><span>Featured Products</span></h2>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-3 small-text text-center">
+			<img src="https://images.unsplash.com/photo-1515377905703-c4788e51af15?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=250&h=200&q=80" alt="">
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing eli.</p>
+		</div>
+		<div class="col-3 small-text text-center">
+			<img src="https://images.unsplash.com/photo-1521223344201-d169129f7b7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=250&h=200&q=80" alt="">
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing eli.</p>
+		</div>
+		<div class="col-3 small-text text-center">
+			<img src="https://images.unsplash.com/photo-1549869638-10ef712893a7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=250&h=200&q=80" alt="">
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing eli.</p>
+		</div>
+		<div class="col-3 small-text text-center">
+			<img src="https://images.unsplash.com/photo-1512437136892-3d200c4645b9?ixlib=rb-1.2.1&auto=format&fit=crop&w=250&h=200&q=80" alt="">
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing eli.</p>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-12 text-center products-heading">
+			<h2><span>Recent Posts</span></h2>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-3 small-text text-center">
+			<p>Lorem ipsum, dolor sit amet consectetur</p>
+			<h6>Lorem Ipsum</h6>
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing eli.</p>
+			<button type="button" class="btn btn-outline-success">Success</button>
+		</div>
+		<div class="col-3 small-text text-center">
+			<p>Lorem ipsum, dolor sit amet consectetur</p>
+			<h6>Lorem Ipsum</h6>
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing eli.</p>
+			<button type="button" class="btn btn-outline-success">Success</button>
+		</div>
+		<div class="col-3 small-text text-center">
+			<p>Lorem ipsum, dolor sit amet consectetur</p>
+			<h6>Lorem Ipsum</h6>
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing eli.</p>
+			<button type="button" class="btn btn-outline-success">Success</button>
+		</div>
+		<div class="col-3 small-text text-center">
+			<p>Lorem ipsum, dolor sit amet consectetur</p>
+			<h6>Lorem Ipsum</h6>
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing eli.</p>
+			<button type="button" class="btn btn-outline-success">Success</button>
+		</div>
+	</div>
+</div>
+
+<div class="line"></div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-2 small-text links">
+			<p class="bold">NAVIGATE</p>
+			<p><a href="#">Shipping & Returns</a></p>
+			<p><a href="contact.html">Contact Us</a></p>
+			<p><a href="blog.html">Blog</a></p>
+			<p><a href="#">RSS Syndication</a></p>
+			<p><a href="#">Sitemap</a></p>
+		</div>
+		<div class="col-2 small-text links">
+			<p class="bold">CATEGORIES</p>
+			<p><a href="#">Massages</a></p>
+			<p><a href="#">Facials</a></p>
+			<p><a href="#">Nails</a></p>
+			<p><a href="#">Hair</a></p>
+			<p><a href="#">Oils</a></p>
+			<p><a href="#">Lotions</a></p>
+			<p><a href="#">Skin Care Treatment</a></p>
+		</div>
+		<div class="col-2 small-text links">
+			<p class="bold">INFO</p>
+			<p>123 Test St. Salt Lake City, UT 84101</p>
+			<p class="bold">Call us: 801.000.0000</p>
+		</div>
+		<div class="col-2 small-text text-center">
+			<p class="bold">CONNECT WITH US</p>
+			<a href="" class="fa fa-instagram"></a>
+			<a href="" class="fa fa-twitter"></a>
+			<a href="" class="fa fa-facebook"></a>
+		</div>
+		<div class="col-4 small-text">
+			<p class="bold">SUBSCRIBE TO OUR NEWSLETTER</p>
+			<p>Get the latest updates on our new products and upcoming sales</p>
+			<div class="input-group mb-3">
+					<input type="text" class="form-control" placeholder="Your email address" aria-label="Recipient's username" aria-describedby="button-addon2">
+					<div class="input-group-append">
+					  <button class="btn btn-outline-success" type="button" id="button-addon2">Submit</button>
+					</div>
+				  </div>
+		</div>
+	</div>
+</div>
+
+<div class="gap"></div>
+
+
+
 	
 
 <script type="text/javascript" src="js/jquery.js"></script>
